basic game dynamics

--- a/class_problems/firstsprite.html
+++ b/class_problems/firstsprite.html
@@ -23,7 +23,7 @@
 	</style>
 	</head>
 	<body>
-		<img id="thebox" class="somerthing" src="man1.png" />
+		<img id="thebox" class="somerthing" src="helicopter1.png" />
 		<img src="bg1.png" width="1000px" />
 		<script type="text/javascript">
 			var x = 1;
@@ -36,9 +36,9 @@
 				box.style.left = xpos + "px";
 				box.style.top = ypos + "px";
 
-				box.src = "man" + x + ".png";
+				box.src = "helicopter" + x + ".png";
 				x = x + 1;
-				if (x > 4) {
+				if (x > 2) {
 					x = 1;
 				}
 			}
